force-app/main/default/objects/AccountDeliveryTerms__c/AccountDeliveryTerms__c.object-meta.xml
<CustomObject>
    <label>Account Delivery Terms</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Delivery Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Delivery Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>