force-app/main/default/objects/AccountDeliveryTerms__c/fields/DDPCity__c.field-meta.xml
<CustomField>
    <fullName>DDPCity__c</fullName>
    <formula>Account__r.DDPAddress__City__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery City</label>
    <type>Text</type>
</CustomField>