force-app/main/default/objects/AccountDeliveryTerms__c/fields/DDPCountry__c.field-meta.xml
<CustomField>
    <fullName>DDPCountry__c</fullName>
    <formula>TEXT(Account__r.DDPAddress__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Country</label>
    <type>Text</type>
</CustomField>