force-app/main/default/objects/AccountDeliveryTerms__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryTypes</valueSetName>
    </valueSet>
</CustomField>