force-app/main/default/objects/AccountDeliveryTerms__c/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Terms</label>
    <referenceTo>DeliveryTerms__c</referenceTo>
    <relationshipLabel>Account Delivery Terms</relationshipLabel>
    <relationshipName>Account_Delivery_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>