force-app/main/default/objects/AccountDeliveryTerms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>DeliveryTerms__c</columns>
    <columns>Delivery_Type__c</columns>
    <columns>Default__c</columns>
    <columns>DDPCountry__c</columns>
    <columns>DDPCity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>A+R Profilstahl</value>
    </filters>
    <label>All</label>
</ListView>